feat: add infra and handler for user generate token
